pie chart should function